[project]
name = "wiretapper"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3,<4",
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

